@@ -1,9 +1,11 @@
 package support;
 
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.function.Function;
@@ -14,10 +16,19 @@ public class InputSupport {
 
     public static <T> List<T> readAndParseLines(int day, Function<String, T> parser) {
         var uri = buildInputUri(day);
-        try (var lines = Files.lines(Paths.get(uri))) {
+        try (var lines = Files.lines(Path.of(uri))) {
             return lines.map(parser).toList();
         } catch (IOException e) {
-            throw new RuntimeException("could not read input", e);
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    public static String readString(int day) {
+        var uri = buildInputUri(day);
+        try {
+            return Files.readString(Path.of(uri));
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
 
